--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch --loader ts-node/esm src/server.ts",
-    "migrate:dev": "dotenv-cli -e .env -- npx prisma migrate dev",
+    "migrate:dev": "npx dotenv-cli -e .env -- npx prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
