feat: finish modules, cities, countries, add API calls to weather and geoloc

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 # Formato: postgresql://[USUARIO]:[SENHA]@[HOST]:[PORTA]/[NOME_DO_BANCO]
-DATABASE_URL="postgresql://docker:docker@localhost:5432/geo_db?schema=public"
-PORT=3000
+DATABASE_URL="postgresql://postgres:senha@localhost:5432/geo_bd?schema=public"
 
-# APIs Externas (Chaves)
-# Chave da API do OpenWeatherMap (usada para Clima e Geocoding)
-OPENWEATHER_API_KEY="sua_chave_de_api_aqui"
+PORT=3000
+ 
+#  https://www.weatherapi.com/my/
+# api para chamar a temperatura pelas cordenadas da cidade
+OPENWEATHER_API_KEY="sua_api_key"
+
+# https://home.openweathermap.org/api_keys
+# api para chamar a geolocalização (lat e lon) pela cidade
+GEOCODING_API_KEY="sua_api_key"
