docs: update readme

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Formato: postgresql://[USUARIO]:[SENHA]@[HOST]:[PORTA]/[NOME_DO_BANCO]
-DATABASE_URL="postgresql://postgres:senha@localhost:5432/geo_bd?schema=public"
+DATABASE_URL="postgresql://postgres:senha@localhost:5432/geosync_bd?schema=public"
 
 PORT=3000
  
